--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,11 +3,20 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #F4EEEE;
+}
+
+h1{
+    font-size: 48px;
+    text-align: center;
+    margin-top: 20px;
 }
 
 /* Center the search bar vertically and add some margin at the top */
 .search {
+   
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
@@ -17,7 +26,7 @@ body {
     font-size: 24px;
     height: 50px;
     width: 50%;
-    border: 2px solid #ccc;
+    border: 2px solid #000;
     border-radius: 25px;
     padding: 10px 20px;
     background: url("../resources/searchLogo.png") no-repeat;
